test/invalid/baseline/promise-nullable.txt
Syntax error at line 2, since `interface X`:
    attribute Promise<void>?
                           ^ Promise type cannot be nullable
